notify z-index fix
Former-commit-id: 5ddb611e767cb50298639d1344eed5c382d2ef7a

--- a/sources/easygenerator.Web/Content/notify.css
+++ b/sources/easygenerator.Web/Content/notify.css
@@ -11,7 +11,7 @@
     margin-top: 6px;
     position: absolute;
     right: 0;
-    z-index: 1;
+    z-index: 150;
 }
 
 .notification {
